--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "geist": "^1.5.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
