--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.34.0",
     "geist": "^1.5.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
